# checker

./: .editorconfig  .env.example  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  url_monitor.py
.github/workflows/: build_and_push.yml  main.yml  mater.yml  quality_checks.yml
tests/: test_url_monitor.py
